<resources>
	<string name="hello">Choose one of the features below.</string>
	<string name="app_name">Complete Linux Installer</string>
	<string name="title_about">About</string>
	<string name="title_home">Home</string>
	<string name="title_search">Search</string>
	<string name="button_back">Back</string>
	<string name="button_next">Next</string>
	<string name="button_finished">Finished</string>
	<string name="download_VNC">Download/Install VNCViewer App</string>
	<string name="download_Term">Download/Install Terminal App</string>
	<string name="download_sourceforge">Download from sourceforge</string>
	<string name="download_Torrent">Download torrent file</string>
	<string name="install_apps_text">Now while this is downloading, download and install the terminal app and vncviewer app if you have not already</string>
	<string name="after_install_text">Once you have downloaded the Linux package and installed both apps press NEXT</string>
	<string name="frontpage_btn_InstallGuides">Install Guides</string>
	<string name="frontpage_btn_BuildGuides">Build Guides</string>
	<string name="frontpage_btn_Tips">Tips</string>
	<string name="frontpage_btn_FAQ">FAQ</string>
	<string name="frontpage_btn_Changelog">Change Logs</string>
	<string name="frontpage_btn_Launch">Launch</string>
	<string name="installGuide_Menu_Intro">These are the install guides for the range of supported Linux distros.</string>
	<string name="installGuide_Menu_Ubuntu10">Ubuntu 10 Install Guide</string>
	<string name="installGuide_Menu_Ubuntu12">Ubuntu 12 Install Guide</string>
	<string name="installGuide_Menu_Backtrack">Backtrack Install Guide</string>
	<string name="installGuide_Menu_Debian">Debian Install Guide</string>
	<string name="ubuntu10_download_Script">Download Boot Script</string>
	<string name="ubuntu10_download_menu_button">Download Ubuntu Image</string>
	<string name="ubuntu10_download_Large">Download Large Ubuntu Image</string>
	<string name="ubuntu10_download_Small">Download Small Ubuntu Image</string>
	<string name="ubuntu10_install_page1">Before we start you MUST have Root and a kernel that supports loop devices. This works best on lighter roms that give you more free memory to run Ubuntu smoothly.\n\nAlso make sure that you have debugging mode enabled Go to Settings->Applications->Development and make sure USB Debugging is checked ON.\n\nYou will also need at least 3.5GB of memory card space for the large image and 2.5GB for the small image\n\nIf you have all of this please press NEXT, otherwise you will not be able to install Ubuntu on your device</string>
	<string name="ubuntu10_install_page2">Lets start by downloading the Ubuntu image file. There are three images full, small and core. Large gives you a greater range of preinstalled programs while the small image is much less to download and more lightweight</string>
	<string name="ubuntu10_install_page3">Once the download has finished you will now need to extract the zip folder using a file manager of your choice, extract this into a folder called ubuntu on the root of your sdcard (there should be two files ubuntu.img and ubuntu.img.md5)\n\nYou are now ready to boot Ubuntu, do this by either using the Launch menu item or place the boot Ubuntu widget on you home screen and click it.\n\nYou can set settings like screen size in the Launch menu (found on the main screen of the app).\n\n After a minute or two you should get this message root@localhost:/# if you do get this then Ubuntu is running please click NEXT.\nIf you don\'t please check you do have root and a kernel that supports loop devices, if you still have problems check the FAQ section</string>
	<string name="ubuntu10_install_page4">The terminal will now act like a Ubuntu command line, to connect to the GUI run the VNC viewer app we have downloaded.\nSet your IP address to localhost and port number 5900 and enter the password ubuntu, then press connect and the GUI will render.\n\n\nNOTE when you are finished in Ubuntu you must type exit in the command line and then wait until everything shuts down.</string>
	<string name="ubuntu10_image_description">The large image is 1.5GB to download and 3.5GB once extracted, it includes a wide range of programs from python to open office. There is around 1.5GB of free space for your own programs.\n\nThe small images is 500MB to download and 2.5GB once extracted, it includes only the basic apps required like a web browser and Java. There is around 1.5GB of free space for your own programs.</string>
	<string name="ubuntu12_download_Script">Download Boot Script</string>
	<string name="ubuntu12_download_menu_button">Download Ubuntu Image</string>
	<string name="ubuntu12_download_Large">Download Large Ubuntu Image</string>
	<string name="ubuntu12_download_Small">Download Small Ubuntu Image</string>
	<string name="ubuntu12_download_Core">Download Core Ubuntu Image</string>
	<string name="ubuntu12_install_page1">Before we start you MUST have Root and a kernel that supports loop devices. This works best on lighter roms that give you more free memory to run Ubuntu smoothly.\n\nAlso make sure that you have debugging mode enabled Go to Settings->Applications->Development and make sure USB Debugging is checked ON.\n\nYou will also need at least 3.5GB of memory card space for the large image and 2.5GB for the small image\n\nIf you have all of this please press NEXT, otherwise you will not be able to install Ubuntu on your device</string>
	<string name="ubuntu12_install_page2">Lets start by downloading the Ubuntu image file. There are three images full, small and core. Click in the download button for info on each image</string>
	<string name="ubuntu12_install_page3">Once the download has finished you will now need to extract the zip folder using a file manager of your choice, extract these into a folder called ubuntu on the root of your sdcard (there should be two files ubuntu.img and ubuntu.img.md5)\n\nYou are now ready to boot Ubuntu, do this by either using the Launch menu item or place the boot Ubuntu widget on you home screen and click it.\n\nYou can set settings like screen size in the Launch menu (found on the main screen of the app).\n\n After a minute or two you should get this message root@localhost:/# if you do get this then Ubuntu is running please click NEXT.\nIf you don\'t please check you do have root and a kernel that supports loop devices, if you still have problems check the FAQ section</string>
	<string name="ubuntu12_install_page4">The terminal will now act like a Ubuntu command line, to connect to the GUI run the VNC viewer app we have downloaded.\nSet your IP address to localhost and port number 5900 and enter the password ubuntu, then press connect and the GUI will render.\n\n\nNOTE when you are finished in Ubuntu you must type exit in the command line and then wait until everything shuts down.</string>
	<string name="ubuntu12_image_description">The Core image is 200MB to download and 750MB once extracted, it only includes the basic set up needed to run Ubuntu there is no GUI and about 400MB free space.\nThe Small image is 400MB to download and 2GB once extracted, it includes the LXDE desktop and basic programs like Firefox and leafpad and about 1GB free space.\nThe Full image is 1.3GB to download and 3.5GB once extracted, this include the Unity desktop and a range of programs, and about 1.1GB free space</string>
	<string name="backtrack_download_Script">Download Boot Script</string>
	<string name="backtrack_download_Image">Download Backtrack Image</string>
	<string name="backtrack_install_page1">Before we start you MUST have Root and a kernel that supports loop devices.\nThis works best on lighter roms that give you more free memory to run Backtrack smoothly\n\n\nAlso make sure that you have debugging mode enabled Go to Settings->Applications->Development and make sure USB Debugging is checked ON.\n\n\nYou will also need at least 3.5GB of memory card space for the large image\n\n\nIf you have all of this please press NEXT, otherwise you will not be able to install Backtrack on your device</string>
	<string name="backtrack_install_page2">Lets start by downloading the Backtrack image file.</string>
	<string name="backtrack_install_page3">Once the download has finished you will now need to extract the zip folder using a file manager of your choice, extract this into a folder called backtrack on the root of your sdcard (there should be two files backtrack.img and backtrack.img.md5)\n\nYou are now ready to boot Backtrack, do this by either using the Launch menu item or place the boot backtrack widget on your home screen and click it.\n\nYou can set settings like screen size in the Launch menu (found on the main screen of the app).\n\n After a minute or two you should get this message root@localhost:/# if you do get this then backtrack is running please click NEXT.\nIf you don\'t please check you do have root and a kernel that supports loop devices, if you still have problems check the FAQ section</string>
	<string name="backtrack_install_page4">The terminal will now act like a Backtrack command line, to connect to the GUI run the VNC viewer app we have downloaded.\n Set your IP address to localhost and port number 5900 and enter the password backtrac, then press connect and the GUI will render.\n\n\nNOTE when you are finished in backtrack you must type exit in the command line and then wait until everything shuts down.</string>
	<string name="debian_download_Script">Download Boot Script</string>
	<string name="debian_download_menu_button">Download Image</string>
	<string name="debian_download_Large">Download Large Image</string>
	<string name="debian_download_Small">Download Small Image</string>
	<string name="dialog_select_donwload_type_description">Please select the type of download you want, you can choose to download either a torrent file or from sourceforge.</string>
	<string name="dialog_button_torrent">Torrent File</string>
	<string name="dialog_button_sourceforge">From Sourceforge</string>
	<string name="dialog_button_cancel_download">Cancel Download</string>
	<string name="buildGuides_Intro">These are the guides to building your own Linux Distro images.\n\n These methods are not the same for all distros so read the one for the distro you want to use!</string>
	<string name="btn_BuildGuide_Ubuntu">Ubuntu Build Guide</string>
	<string name="Config_intro">This is the configuration screen, here you can change how the image is started and set various settings.</string>
	<string name="config_button_mounts">Configure mounts</string>
	<string name="check_box_start_vnc">Start VNC Server</string>
	<string name="check_box_start_ssh">Start SSH Server</string>
	<string name="config_screen_width">Screen Width</string>
	<string name="config_screen_height">Screen Height</string>
	<string name="content_Description_dummy"></string>
	<string name="content_Description_logo">Complete Linux Installer</string>
	<string name="content_Description_about">About</string>
	<string name="content_Description_home">Home</string>
	<string name="content_Description_search">Search</string>
	<string name="updater_BootIntro">Boot script, this is the script used by the launcher and widgets</string>
	<string name="updater_AutoBootIntro">Auto boot script, this is the one used to auto start with Android</string>
	<string name="updater_Label_InstalledBoot">Installed:</string>
	<string name="updater_Label_OnlineBoot">Latest:</string>
	<string name="updater_Label_InstalledAutoBoot">Installed:</string>
	<string name="updater_Label_OnlineAutoBoot">Latest:</string>
	<string name="updater_btn_UpdateBootScript">Update Boot Script</string>
	<string name="updater_btn_UpdateAutoBootScript">Update Auto Boot Script</string>
	<string name="installGuide_Menu_ArchLinux">ArchLinux</string>
	<string name="installGuide_Menu_Fedora">Fedora 17</string>
	<string name="installGuide_Menu_openSUSE">openSUSE 12</string>
    <string name="check_box_swap">Create 1GB SWAP File</string>
</resources>