<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2013 linuxonandroid.org

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent" >

	<ScrollView
	    android:id="@+id/ScrollLayout"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" >

<LinearLayout
   		    android:layout_width="fill_parent"
   		    android:layout_height="wrap_content"
   		    android:orientation="vertical" >
<TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/Config_intro"
			    android:textAppearance="?android:textAppearanceSmall" />
<CheckBox
			    android:id="@+id/chk_RunSSH"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/check_box_start_ssh" />
			<CheckBox
				    android:id="@+id/chk_swap"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:text="@string/check_box_swap" />
<CheckBox
			    android:id="@+id/chk_RunVNC"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/check_box_start_vnc" />
<LinearLayout
			    android:id="@+id/runVNC_Resolution_Width"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content" >
<TextView
				    android:id="@+id/lab_ScreenWidth"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:text="@string/config_screen_width" />
<EditText
				    android:id="@+id/txt_ScreenWidth"
				    android:layout_width="0dip"
				    android:layout_height="wrap_content"
				    android:layout_weight="1"
				    android:ems="10" >
<requestFocus />				</EditText>
			</LinearLayout>
<LinearLayout
			    android:id="@+id/runVNC_Resolution_Height"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content" >
<TextView
				    android:id="@+id/lab_ScreenHeight"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:text="@string/config_screen_height" />
<EditText
				    android:id="@+id/txt_ScreenHeight"
				    android:layout_width="0dip"
				    android:layout_height="wrap_content"
				    android:layout_weight="1"
				    android:ems="10" >
 <requestFocus />
				</EditText>
			</LinearLayout>
<Button
			    android:id="@+id/btn_Config_Mounts"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/config_button_mounts" />
</LinearLayout>
	</ScrollView>
<Button
	    android:id="@+id/btn_Back"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentLeft="true"
	    android:layout_marginBottom="5dp"
	    android:text="@string/button_back" />
</RelativeLayout>
